# xnat-ingest

./: .codespell-ignorewords  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci-cd.yml  tests.yml
docs/source/: api.rst  cli.rst  conf.py  developer.rst  how_to.rst  index.rst  quick_start.rst
docs/source/_static/: custom.css
docs/source/developer/: contributing.rst  data_model.rst  file_formats.rst
docs/source/how_to/: associate.rst  deidentify.rst  deploying.rst  pipeline.rst
odm/: .gitignore  dataset.py  jcampdx.py
odm/config/: pv360.json
real-tests/: usyd_check_upload.py  usyd_stage.py  usyd_transfer.py  usyd_upload.py
scripts/: dcm_performance_mrtrix.py  dcm_performance_pydicom.py  get_pet_tst.py  logging_testing.py  run_upload.py
temp_scripts/: test_fileformats_neuro.py
temp_scripts/fileformats_neuro/: __init__.py  eeg.py  eeg_extras.py  meg.py  meg_extras.py  xnat_integration.py
viewer/: README.md  config.py  main.py  requirements.txt
viewer/controllers/: home.py
viewer/core/: app.py  controller.py  forms.py  model.py  module.py  route.py  view.py
viewer/db/: app.db  create_db.py
viewer/models/: __init__.py  home.py
viewer/utils/: constants.py  data_type.py
viewer/views/: home.py
xnat_exported_scans/: _version.py  dicom.py  utils.py
xnat_exported_scans/cli/: base.py  upload.py
xnat_exported_scans/cli/tests/: test_upload.py
xnat_ingest/: dicom.py  exceptions.py  helpers_upload.py  resource.py  scan.py  session.py  spec.py  store.py  upload_helpers.py  utils.py
xnat_ingest/api/: __init__.py  assign_.py  assign_api.py  associate_.py  associate_api.py  check_upload_.py  deidentify_.py  deidentify_api.py  group_.py  group_api.py  sort_.py  upload_.py  upload_api.py
xnat_ingest/api/tests/: test_assign.py  test_deidentify.py  test_group.py
xnat_ingest/cli/: __init__.py  assign.py  assign_cli.py  associate.py  associate_cli.py  base.py  check_upload.py  deidentify.py  deidentify_cli.py  group.py  group_cli.py  sort.py  stage.py  transfer.py  upload.py  upload_cli.py  utils.py
xnat_ingest/cli/tests/: test_cli.py  test_group_orthanc_cli.py  test_upload.py  test_upload_loop.py
xnat_ingest/fileformats/medimage/: eeg_meg.py
xnat_ingest/helpers/: arg_types.py  cli_types.py  glob2re.py  logging.py  metadata.py  remotes.py
xnat_ingest/helpers/tests/: test_arg_types.py  test_glob2re.py  test_metadata.py  test_remotes.py
xnat_ingest/model/: resource.py  scan.py  session.py  store.py
xnat_ingest/model/tests/: test_from_orthanc.py  test_resource.py  test_session.py
xnat_ingest/tests/: test_cli.py  test_dicom.py  test_session.py  test_utils.py
xnat_siemens_export_upload/: utils.py
xnat_siemens_export_upload/cli/: base.py  upload_exported.py
xnat_siemens_export_upload/cli/tests/: test_upload_exported.py
